--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product App</title>
@@ -17,9 +18,8 @@
             </div>
 
             <div class="product-info">
-                
+                <h1>{{product}}</h1>
             </div>
-            <h1>{{product}}</h1>
 
         </div>
     </div>
