--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="product">
             
             <div class="product-image">
-                <img src="">
+                <img v-bind:src="image">
             </div>
 
             <div class="product-info">
